--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button> 
       </div>
     <div class="col-lg-6">
-      <img class="title-image" src="images/DatingKey_Demo.png" alt="DatingKey">
+      <img class="title-image" src="images/DatingKey_Demo1.png" alt="DatingKey">
     </div>
     </div>
     </div>
@@ -143,54 +143,54 @@
 
 <div class="row">
   <div class="pricing-column col-lg-4 col-md-6">
-    <div class="card">
+    <div class="card text-white bg-primary">
       <div class="card-header">
         <h3>Plus</h3>
       </div>
       <div class="card-body">
         <h2>$25 / mo</h2>
-        <p>5 Matches Per Day</p>
-        <p>5 Top picks</p>
-        <p>1 Super boost per Month</p>
-        <p>Upto 2 anonymous profile viewing / mo</p>
-        <p>Read Receipts</p>
-        <p>End-to-End Encryption</p>
+        <h6>5 Matches Per Day</h6>
+        <h6>5 Top picks</h6>
+        <h6>1 Super boost per Month</h6>
+        <h6>Upto 2 anonymous profile viewing / mo</h6>
+        <h6>Read Receipts</h6>
+        <h6>End-to-End Encryption</h6>
         <button type="button" class="btn btn-outline-dark btn-lg signup-button">Sign Up</button>
       </div>
     </div>
   </div>
 
   <div class="pricing-column col-lg-4 col-md-6">
-    <div class="card">
+    <div class="card text-dark bg-warning">
       <div class="card-header">
         <h3>Gold</h3>
       </div>
       <div class="card-body">
         <h2>$75 / mo</h2>
-        <p>20 Matches Per Day</p>
-        <p>10 Top picks</p>
-        <p>5 Super boosts per Month</p>
-        <p>Upto 5 anonymous profile viewing / mo</p>
-        <p>Read Receipts</p>
-        <p>End-to-End Encryption</p>
+        <h6>20 Matches Per Day</h6>
+        <h6>10 Top picks</h6>
+        <h6>5 Super boosts per Month</h6>
+        <h6>Upto 5 anonymous profile viewing / mo</h6>
+        <h6>Read Receipts</h6>
+        <h6>End-to-End Encryption</h6>
         <button type="button" class="btn btn-outline-dark btn-lg signup-button">Sign Up</button> 
       </div>
     </div>
   </div>
 
   <div class="pricing-column col-lg-4">
-    <div class="card">
+    <div class="card text-dark bg-light">
       <div class="card-header">
         <h3>Platinum</h3>
       </div>
       <div class="card-body">
         <h2>$125 / mo</h2>
-        <p>Priority Listing</p>
-        <p>Unlimited Top picks</p>
-        <p>10 Super boosts per Month</p>
-        <p>Unlimited Anonymous profile viewing</p>
-        <p>Read Receipts</p>
-        <p>End-to-End Encryption</p>
+        <h6>Priority Listing</h6>
+        <h6>Unlimited Top picks</h6>
+        <h6>10 Super boosts per Month</h6>
+        <h6>Unlimited Anonymous profile viewing</h6>
+        <h6>Read Receipts</h6>
+        <h6>End-to-End Encryption</h6>
         <button type="button" class="btn btn-outline-dark btn-lg signup-button">Sign Up</button>
       </div>
     </div>
