added/customized cta and footer section

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
           </li>
       </ul>
    </div>
@@ -139,7 +139,7 @@
   <section id="pricing">
 
     <h2>Subscription Plans</h2>
-    <p>Upgrade to Plus, Gold or Platinum for enhanced experience specially customized for you.</p>
+    <h5>Upgrade to Plus, Gold or Platinum for enhanced experience specially customized for you.</h5>
 
 <div class="row">
   <div class="pricing-column col-lg-4 col-md-6">
@@ -202,18 +202,22 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
 
   </section>
-
 
   <!-- Footer -->
 
   <footer id="footer">
+    <i class="social-icon fab fa-facebook-f"></i>
+    <i class="social-icon fab fa-twitter"></i>
+    <i class="social-icon fab fa-instagram"></i>
+    <i class="social-icon fab fa-linkedin-in"></i>
+    <i class="social-icon far fa-envelope"></i>
 
-    <p>© Copyright 2021 DatingKey</p>
+    <h6>© Copyright 2021 DatingKey</h6>
 
   </footer>
 
