--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Title -->
     <div class="row">
       <div class="col-lg-6">
-        <h1>Dating, make friends and meet new people.</h1>
+        <h1 class="big-heading">Dating, make friends and meet new people.</h1>
          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button> 
       </div>
